--- a/config/locales/en/application.en.yml
+++ b/config/locales/en/application.en.yml
@@ -1,8 +1,8 @@
 en:
   application:
-    name: Untitled Application
+    name: Life OS
     owner: Unidentified Developer
     description: "You can update this description in `config/locales/en/application.en.yml`."
-    keywords: untitled application seo keywords
+    keywords: life os seo keywords
     support_email: change.me@localhost
-    key: untitled_application
+    key: life_os
